--- a/Humour.Rmd
+++ b/Humour.Rmd
@@ -4,9 +4,5 @@ title: "Humour"
 
 If you want to chat about science or education, or if you are interested in me doing some commission illustration work for you, get in touch with me! 
 
-<img align="centre" width="600" style="padding: 15px" src="./Phage-bacteria_competition.png">
-<img align="centre" width="600" style="padding: 15px" src="./Cas9dcas9.png">
-<img align="centre" width="600" style="padding: 15px" src="./Feb_2021.png">
-<img align="centre" width="600" style="padding: 15px" src="./January_21.png">
-<img align="centre" width="600" style="padding: 15px" src="./Mars_20205.png">
-<img align="centre" width="600" style="padding: 15px" src="./Mars_20207.png">
+<img align="centre" width="1000" style="padding: 15px" src="./hum.png">
+
