--- a/sciil.Rmd
+++ b/sciil.Rmd
@@ -4,11 +4,4 @@ title: "Scientific Illustration"
 
 If you want to chat about science or education, or if you are interested in me doing some commission illustration work for you, get in touch with me! 
 
-<img align="centre" width="600" style="padding: 15px" src="./Emanuel_skin.png">
-<img align="centre" width="600" style="padding: 15px" src="./Epigenetics-for-Pedro-Oliveira.png">
-<img align="centre" width="600" style="padding: 15px" src="./CRISPRi_text.png">
-<img align="centre" width="600" style="padding: 15px" src="./Gizem_cell_wall.png">
-<img align="centre" width="600" style="padding: 15px" src="./Ingo_space.png">
-<img align="centre" width="600" style="padding: 15px" src="./Karsten_-_Breast_cancer.png">
-<img align="centre" width="600" style="padding: 15px" src="./Laura_babybrain.png">
-<img align="centre" width="600" style="padding: 15px" src="./Tanja_DNA.png">
+<img align="centre" width="1000" style="padding: 15px" src="./sci_ill.png">
